minor index fixes

--- a/finite.tex
+++ b/finite.tex
@@ -83,7 +83,7 @@ and the long composite gives the descent datum $\phi$.  Conversely, given a desc
 \end{remark}
 
 \begin{remark}[{\cite[Theorem A]{HoveyMoritaThy}}]\label{StrictCechDescentRemark}
-Alternatively, descent data also arise naturally as sheaves on \index{scheme!simplicial}simplicial schemes.  Associated to the map $f\co \Spec S \to \Spec R$, we can form a \index{Cech complex@{\Cech} complex}{\Cech} complex
+Alternatively, descent data also arise naturally as sheaves on \index{scheme!simplicial}simplicial schemes.  Associated to the map $f\co \Spec S \to \Spec R$, we can form a \index{Cech complex@\v{C}ech complex}{\Cech} complex
 \[\mathcal D_f := \left\{
 \begin{tikzcd}[ampersand replacement=\&]
 \Spec S \arrow{r} \arrow[leftarrow,shift left=\baselineskip]{r} \arrow[leftarrow,shift right=\baselineskip]{r} \&
