--- a/quillen.tex
+++ b/quillen.tex
@@ -10,7 +10,7 @@ There is a map of infinite--loopspaces \[J_{\C}\co BU \to B \GL_1 \S\] called th
 \end{theorem}
 
 \begin{definition}[{cf.\ \Cref{DefnOfMO}}]\label{DefnComplexOrientation}
-The associated Thom spectrum is written ``$MU$'' and called \index{bordism!complex bordism, $MU$}\textit{complex bordism}.  A map $MU \to E$ of ring spectra is said to be a \index{orientation!complex}\textit{complex orientation of $E$}.
+The associated Thom spectrum is written ``$MU$'' and called \index{bordism!complex, $MU$}\textit{complex bordism}.  A map $MU \to E$ of ring spectra is said to be a \index{orientation!complex}\textit{complex orientation of $E$}.
 \end{definition}
 
 \begin{theorem}[{cf.\ \Cref{GeneralThomIsom}}]\label{ThomIsomOverC}\index{Thom isomorphism}
