change name of C^3 in the intro

--- a/intro.tex
+++ b/intro.tex
@@ -82,7 +82,7 @@ MU[6, \infty) \arrow{r} \arrow{rd} & M\String \arrow[densely dotted]{d} \\
 Leaving aside the extension problem for the moment, their main theorem is the following description of the cohomology ring $E^* MU[6, \infty)$:
 
 \begin{theorem}[{Ando--Hopkins--Strickland~\cite{AHSTheoremOfTheCube}, cf.\ Singer~\cite{Singer} and Stong~\cite{Stong}}]\label{IntroAHSMU6Thm}
-For $E$ an even--periodic cohomology theory, there is an isomorphism \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``$C^3(\G_E; \sheaf I(0))$'' is the affine scheme parametrizing \index{cubical structure}\textit{cubical structures}.  When $E$ is taken to be elliptic, so that there is a specified \index{elliptic curve}elliptic curve $C$ and a specified isomorphism $\G_E \cong C^\wedge_0$, the theory of elliptic curves gives a canonical such cubical structure and hence a preferred class $MU[6, \infty) \to E$.  This assignment is natural in the choice of elliptic $E$. \qed
+For $E$ an even--periodic cohomology theory, there is an isomorphism \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``$C^3(\G_E; \sheaf I(0))$'' is the affine scheme parametrizing \index{cubical structure}\textit{cubical structures} on the line bundle $\sheaf I(0)$ over $\G_E$.  When $E$ is taken to be elliptic, so that there is a specified \index{elliptic curve}elliptic curve $C$ and a specified isomorphism $\G_E \cong C^\wedge_0$, the theory of elliptic curves gives a canonical such cubical structure and hence a preferred class $MU[6, \infty) \to E$.  This assignment is natural in the choice of elliptic $E$. \qed
 \end{theorem}
 
 Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory, and we will work through a sequence of case studies where this perspective shines through most brightly.  In particular, rather than taking an optimal route to the Ando--Hopkins--Strickland result, we will use it as a gravitational slingshot to cover many anciliary topics which are also governed by the technology of formal geometry.  We will begin by working through Thom's calculation of the homotopy of $MO$, which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity of the general situation, so that we know what to expect later on.  Having seen that through, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the $\sigma$--orientation and its extensions.  Again, the overriding theme of the text will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions: it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
