--- a/preamble.tex
+++ b/preamble.tex
@@ -299,8 +299,8 @@
 
 % section headers
 
-% \crefname{section}{lecture}{lectures} \Crefname{section}{Lecture}{Lectures}
-% \crefname{chapter}{case study}{case studies} \Crefname{chapter}{Case Study}{Case Studies}
+\crefname{section}{lecture}{lectures} \Crefname{section}{Lecture}{Lectures}
+\crefname{chapter}{case study}{case studies} \Crefname{chapter}{Case Study}{Case Studies}
 
 % put commas between adjacent footnotes without disturbing hyperref
 
