--- a/preamble.tex
+++ b/preamble.tex
@@ -186,7 +186,7 @@
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
 \newcommand{\Ucontext}[1]{\mathcal{UM}_{#1}}
 \newcommand{\Econtext}[1]{E_\infty\mathcal{M}_{#1}}
-\newcommand{\CatOf}[1]{\mathsf{#1}}
+\newcommand{\CatOf}[1]{\normalfont\textsc{#1}}
 \newcommand{\ps}[1]{\llbracket{#1}\rrbracket}
 \newcommand{\moduli}[1]{\mathcal{M}_{\mathbf{#1}}}
 \newcommand{\OS}[2]{\underline{\smash{#1}}_{#2}}
