fix an equation, reference to “germ at infinity”

--- a/finite.tex
+++ b/finite.tex
@@ -1211,7 +1211,7 @@ After a nontrivial reduction argument, this comes down to an identical fact: the
 \end{proof}
 
 \begin{corollary}
-$L_\Gamma E = 0$ for any coconnective $E$, and hence $L_\Gamma E = L_\Gamma(E[n, \infty))$ for \emph{any} spectrum $E$ and \emph{any} index $n$.\footnote{This property has the memorable slogan that Morava $K$--theories remember the ``germ at $\infty$''.}
+$L_\Gamma E = 0$ for any coconnective $E$, and hence \[L_\Gamma E = L_\Gamma(E[n, \infty))\] for \emph{any} spectrum $E$ and \emph{any} index $n$.\footnote{A memorable slogan is that Morava $K$--theories are sensitive only to the ``germ at $\infty$''~\cite[Section 3.3.3]{MitchellIwasawa}.}
 \end{corollary}
 \begin{proof}
 Any coconnective spectrum can be expressed as the colimit of its truncations
