--- a/main.bib
+++ b/main.bib
@@ -1946,6 +1946,30 @@ MRREVIEWER = {Edgar H. Brown, Jr.},
        URL = {http://dx.doi.org/10.1090/conm/019/711056},
 }
 
+@incollection{MitchellIwasawa,
+  title={{$K(1)$}-local homotopy theory, Iwasawa theory, and algebraic {$K$}-theory},
+  author={Mitchell, Stephen A},
+  year={2005},
+  booktitle={Handbook of K-theory},
+  publisher={Springer Science \& Business Media}
+}
+
+@incollection {MoravaMotivicThomIso,
+    AUTHOR = {Morava, Jack},
+     TITLE = {The motivic {T}hom isomorphism},
+ BOOKTITLE = {Elliptic cohomology},
+    SERIES = {London Math. Soc. Lecture Note Ser.},
+    VOLUME = {342},
+     PAGES = {265--285},
+ PUBLISHER = {Cambridge Univ. Press, Cambridge},
+      YEAR = {2007},
+   MRCLASS = {55N22 (11G09 14F42 57R77)},
+  MRNUMBER = {2330517},
+MRREVIEWER = {Mark Hovey},
+       DOI = {10.1017/CBO9780511721489.014},
+       URL = {http://dx.doi.org/10.1017/CBO9780511721489.014},
+}
+
 @article {MoravaFormsOfKthy,
     AUTHOR = {Morava, Jack},
      TITLE = {Forms of {$K$}-theory},
