move some open questions to Apdx B

--- a/mo.tex
+++ b/mo.tex
@@ -643,7 +643,7 @@ This Hopf algebra is commonly denoted $\mathcal A(1)_*$, and its corresponding s
 Formal geometry aside, this $kO$--based Adams spectral sequence collapses, giving an isomorphism \[\Cotor^{*, *}_{\mathcal A(1)_*}(\F_2, \mathcal A_*) = \mathcal A_* \mmod \mathcal A(1)_* \cong \HFtwo_* kO.\]  In turn, the original Adams spectral sequence takes the form \[\Cotor^{*, *}_{\mathcal A_*}(\F_2, \mathcal A \mmod \mathcal A(1)_*) \cong \Cotor^{*, *}_{\mathcal A(1)_*}(\F_2, \F_2) \Rightarrow \pi_* kO,\] where we have used the cofreeness property of \Cref{CotensorReducesCofreeness}.  This spectral sequence is also collapsing, and we provide a picture of it in \Cref{kOASSFigure}.  In particular, eight-fold real Bott periodicity can be quickly read off from this picture.
 \end{example}
 
-\begin{example}
+\begin{example}\label{HopfInvariant1ExampleMO}
 At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\widetilde{\F_2}$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.  It is worth remarking that some of the stable stems receive identifiable names in this language: for instance, the elements of $H^1_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{\F_2})$ are exactly the $1$--cocycles \[h_j\co \left( f = x + \sum_{j=1}^\infty \xi_j x^{2^j}\right) \mapsto \xi_j.\]  The cocycle $h_j$ transforms in the $\Gm$--character $z \mapsto z^{2^j}$, hence $h_1$ is a name for the lone element in the spectral sequence contributing to $\pi_1 \S$, which we also know to be $\eta$.  In general, the elements $h_j$ selecting the power series coefficients are called the \idxentry{Hopf invariant $1$ elements}, and their survival or demise in the Adams spectral sequence is directly related to the problem of putting $H$--space structures on spheres~\cite{AdamsVFoS}.
 \end{example}
 
@@ -745,7 +745,7 @@ where the equality at bottom follows from the universal property of $\HFtwo P_0(
 There is an $\InternalAut(\G_a)$--equivariant isomorphism of schemes \[\Spec \HFtwo P_0(MO) \cong \Coord_1(\RP^\infty_{\HFtwo P}),\] where the latter is the subscheme of functions $\RP^\infty_{\HFtwo P} \to \A^1$ which are coordinates (i.e., which are \emph{isomorphisms} of formal schemes---or, equivalently, which restrict to the canonical identification of tangent spaces $\RP^1_{\HFtwo P} = \A^{1,(1)}$).
 \end{corollary}
 \begin{proof}
-The conclusion of the previous Corollary is that the $\F_2$--points of $\Spec \HFtwo P_0(MO)$ biject with classes $\HFtwo P^0 MO(1) \cong \widetilde{\HFtwo P}^0 \RP^\infty$ satisfying the condition that they give an isomorphism $\RP^\infty_{\HFtwo P} \cong \G_a$.  Because $\HFtwo P_0(MO)$ is a polynomial algebra, this holds in general: for $u\co \F_2 \to T$ an $\F_2$--algebra, the $T$--points of $\Spec \HFtwo P_0(MO)$ will biject with coordinates on $u^* \RP^\infty_{\HFtwo P}$.  The isomorphism of schemes follows, though we have not yet discussed equivarience.
+The conclusion of the previous Corollary is that the $\F_2$--points of $\Spec \HFtwo P_0(MO)$ biject with classes in $\HFtwo P^0 MO(1) \cong \widetilde{\HFtwo P}^0 \RP^\infty$ satisfying the condition that they give an isomorphism $\RP^\infty_{\HFtwo P} \cong \G_a$.  Because $\HFtwo P_0(MO)$ is a polynomial algebra, this holds in general: for $u\co \F_2 \to T$ an $\F_2$--algebra, the $T$--points of $\Spec \HFtwo P_0(MO)$ will biject with coordinates on $u^* \RP^\infty_{\HFtwo P}$.  The isomorphism of schemes follows, though we have not yet discussed equivarience.
 
 To compute the action of $\InternalAut \G_a$, we turn to the map in \Cref{RPnThomExample}: \[\Susp^\infty BO(1) \xrightarrow{c, \simeq} \Susp MO(1).\]  Writing $\beta(t) = \sum_{j=0}^\infty \beta_j t^j$ and $\xi(t) = \sum_{k=0}^\infty \xi_k t^{2^k}$, the dual Steenrod coaction on $\HFtwo P_0 BO(1)$ is encoded by the formula \[\sum_{j=0}^\infty \psi(\beta_j) t^j = \psi(\beta(t)) = \beta(\xi(t)) = \sum_{j=0}^\infty \beta_j \left(\sum_{k=0}^\infty \xi_k t^{2^k} \right)^j.\]  Because $c_*(\beta_j) = \beta'_{j-1}$, this translates to the formula $\psi(\beta'(t)) = \beta'(\xi(t))$, where \[\beta'(t) = \sum_{j=0}^\infty \beta'_j t^{j+1}.\]  Passing from $\HFtwo P_0(MO(1))$ to \[\HFtwo P_0(MO) \cong \Sym \HFtwo P_0(MO(1)) / (\beta'_0 = 1),\] we see that this is precisely the formula for precomposing a coordinate with a strict automorphism.  This is exactly the assertion that a point in $\Aut_1(\G_a)$ acts on a point in $\Coord(\RP^\infty_{\HFtwo P})$ in the way claimed.
 \end{proof}
