mention hattori-stong

--- a/finite.tex
+++ b/finite.tex
@@ -310,7 +310,7 @@ Let $L = \Z[b_0, b_1, b_2, \ldots] / (b_0 - 1)$ be the universal ring supporting
 \exp(x) & := \sum_{j=0}^\infty b_j x^{j+1}, &
 \log(x) & := \sum_{j=0}^\infty m_j x^{j+1}.
 \end{align*}
-They induce a formal group law on $L$ by the conjugation formula \[x +_! y = \exp(\log(x) + \log(y)),\] which is in turn classified by a map $u\co \sheaf O_{\moduli{fgl}} \to L$.\footnote{This is \emph{not} the universal formal group law.  We will soon see that some formal group laws do not admit logarithms.}  Modulo decomposables, we compute
+They induce a formal group law on $L$ by the conjugation formula \[x +_! y = \exp(\log(x) + \log(y)),\] which is in turn classified by a map $u\co \sheaf O_{\moduli{fgl}} \to L$.\footnote{This is \emph{not} the universal formal group law.  We will soon see that some formal group laws do not admit logarithms.  Rather, it is the group law associated to $H\Z \sm MU$, and the map we are studying is that induced by $MU \to H\Z \sm MU$ as in \Cref{OrientationsOnEAndMU}.  In light of this, there is a multiplicative version of this same story: the Hattori--Stong theorem states that $MU_* \to K_* MU$ has image a direct summand~\cite{Araki,BakerCombinatorialFGLs}.}  Modulo decomposables, we compute
 \begin{align*}
 x & = \exp(\log(x)) \\
 & = x + \sum_{n=1}^\infty m_n x^{n+1} + \sum_{n=1}^\infty b_n \left( x + \sum_{j=1}^\infty m_j x^{j+1} \right)^{n+1} \\
