--- a/main.bib
+++ b/main.bib
@@ -267,6 +267,15 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {A. Dold},
 }
 
+@incollection{BakerCombinatorialFGLs,
+  title={Combinatorial and arithmetic identities based on formal group laws},
+  author={Baker, Andrew},
+  booktitle={Algebraic Topology Barcelona 1986},
+  pages={17--34},
+  year={1987},
+  publisher={Springer}
+}
+
 @article {Baker,
     AUTHOR = {Baker, Andrew},
      TITLE = {Power operations and coactions in highly commutative homology
