--- a/unknowns.tex
+++ b/unknowns.tex
@@ -150,7 +150,7 @@ Blueshift, A--M--S, and the relationship to A--F--G?
 
 Does $E_n$ receive an $E_\infty$ orientation?  Does $BP$?  (Johnson--Noel says $BP$ usually does not.  A recent preprint of Lawson says $BP$ is not even $E_\infty$ at $p = 2$!!!)
 
-$p$--divisible groups and transchromatic phenomena
+$p$--divisible groups and transchromatic phenomena.  The ultrachromatic program and the introduction of equicharacteristic homotopy theory.
 
 Remark 12.13 of published $H_\infty$ AHS says their obstruction framework agrees with the $E_\infty$ obstruction framework (if you take everything in sight to have $E_\infty$ structures).  This is almost certainly related to the discussion at the end of Matt's thesis about the $MU$--orientation of $E_d$.
 
